@@ -1,7 +1,23 @@
 /* ladspa.h
 
-   Version 1. Copyright 2000 Richard W.E. Furse, Paul Barton-Davis,
-   Stefan Westerfeld. */
+   Linux Audio Developer's Simple Plugin API Version 1.1[provisional,
+   LGPL].  Copyright (C) 2000-2002 Richard W.E. Furse, Paul
+   Barton-Davis, Stefan Westerfeld.
+   
+   This library is free software; you can redistribute it and/or
+   modify it under the terms of the GNU Lesser General Public License
+   as published by the Free Software Foundation; either version 2.1 of
+   the License, or (at your option) any later version.
+   
+   This library is distributed in the hope that it will be useful, but
+   WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+   Lesser General Public License for more details.
+   
+   You should have received a copy of the GNU Lesser General Public
+   License along with this library; if not, write to the Free Software
+   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+   USA. */
 
 #ifndef LADSPA_INCLUDED
 #define LADSPA_INCLUDED
@@ -20,8 +36,7 @@ extern "C" {
    ability to write simple `plugin' audio processors in C/C++ and link
    them dynamically (`plug') into a range of these packages (`hosts').
    It should be possible for any host and any plugin to communicate
-   completely through this interface. The LADSPA plugin API is free to
-   use.
+   completely through this interface.
 
    This API is deliberately short and simple. To achieve compatibility
    with a range of promising Linux sound synthesis packages it
@@ -57,7 +72,10 @@ extern "C" {
 /* Fundamental data type passed in and out of plugin. This data type
    is used to communicate audio samples and control values. It is
    assumed that the plugin will work sensibly given any numeric input
-   value although it may have a preferred range (see hints below). */
+   value although it may have a preferred range (see hints below). 
+
+   For audio it is generally assumed that 1.0f is the `0dB' reference
+   amplitude and is a `normal' signal level. */
 
 typedef float LADSPA_Data;
 
@@ -183,7 +201,7 @@ typedef int LADSPA_PortRangeHintDescriptor;
    bound of the valid range. If LADSPA_HINT_SAMPLE_RATE is also
    specified then the value of LowerBound should be multiplied by the
    sample rate. */
-#define LADSPA_HINT_BOUNDED_BELOW 0x1
+#define LADSPA_HINT_BOUNDED_BELOW   0x1
 
 /* Hint LADSPA_HINT_BOUNDED_ABOVE indicates that the UpperBound field
    of the LADSPA_PortRangeHint should be considered meaningful. The
@@ -191,14 +209,15 @@ typedef int LADSPA_PortRangeHintDescriptor;
    bound of the valid range. If LADSPA_HINT_SAMPLE_RATE is also
    specified then the value of UpperBound should be multiplied by the
    sample rate. */
-#define LADSPA_HINT_BOUNDED_ABOVE 0x2
+#define LADSPA_HINT_BOUNDED_ABOVE   0x2
 
 /* Hint LADSPA_HINT_TOGGLED indicates that the data item should be
    considered a Boolean toggle. Data less than or equal to zero should
    be considered `off' or `false,' and data above zero should be
    considered `on' or `true.' LADSPA_HINT_TOGGLED may not be used in
-   conjunction with any other hint. */
-#define LADSPA_HINT_TOGGLED       0x4
+   conjunction with any other hint except LADSPA_HINT_DEFAULT_0 or
+   LADSPA_HINT_DEFAULT_1. */
+#define LADSPA_HINT_TOGGLED         0x4
 
 /* Hint LADSPA_HINT_SAMPLE_RATE indicates that any bounds specified
    should be interpreted as multiples of the sample rate. For
@@ -206,12 +225,12 @@ typedef int LADSPA_PortRangeHintDescriptor;
    the sample rate) could be requested by this hint in conjunction
    with LowerBound = 0 and UpperBound = 0.5. Hosts that support bounds
    at all must support this hint to retain meaning. */
-#define LADSPA_HINT_SAMPLE_RATE   0x8
+#define LADSPA_HINT_SAMPLE_RATE     0x8
 
 /* Hint LADSPA_HINT_LOGARITHMIC indicates that it is likely that the
    user will find it more intuitive to view values using a logarithmic
    scale. This is particularly useful for frequencies and gains. */
-#define LADSPA_HINT_LOGARITHMIC   0x10
+#define LADSPA_HINT_LOGARITHMIC     0x10
 
 /* Hint LADSPA_HINT_INTEGER indicates that a user interface would
    probably wish to provide a stepped control taking only integer
@@ -219,7 +238,70 @@ typedef int LADSPA_PortRangeHintDescriptor;
    integer range required to avoid floating point rounding errors. For
    instance, the integer set {0,1,2,3} might be described as [-0.1,
    3.1]. */
-#define LADSPA_HINT_INTEGER       0x20
+#define LADSPA_HINT_INTEGER         0x20
+
+/* The various LADSPA_HINT_HAS_DEFAULT_* hints indicate a `normal'
+   value for the port that is sensible as a default. For instance,
+   this value is suitable for use as an initial value in a user
+   interface or as a value the host might assign to a control port
+   when the user has not provided one. Defaults are encoded using a
+   mask so only one default may be specified for a port. Some of the
+   hints make use of lower and upper bounds, in which case the
+   relevant bound or bounds must be available and
+   LADSPA_HINT_SAMPLE_RATE must be applied as usual. The resulting
+   default must be rounded if LADSPA_HINT_INTEGER is present. Default
+   values were introduced in LADSPA v1.1. */
+#define LADSPA_HINT_DEFAULT_MASK    0x3C0
+
+/* This default values indicates that no default is provided. */
+#define LADSPA_HINT_DEFAULT_NONE    0x0
+
+/* This default hint indicates that the suggested lower bound for the
+   port should be used. */
+#define LADSPA_HINT_DEFAULT_MINIMUM 0x40
+
+/* This default hint indicates that a low value between the suggested
+   lower and upper bounds should be chosen. For ports with
+   LADSPA_HINT_LOGARITHMIC, this should be exp(log(lower) * 0.75 +
+   log(upper) * 0.25). Otherwise, this should be (lower * 0.75 + upper
+   * 0.25). */
+#define LADSPA_HINT_DEFAULT_LOW     0x80
+
+/* This default hint indicates that a middle value between the
+   suggested lower and upper bounds should be chosen. For ports with
+   LADSPA_HINT_LOGARITHMIC, this should be exp(log(lower) * 0.5 +
+   log(upper) * 0.5). Otherwise, this should be (lower * 0.5 + upper *
+   0.5). */
+#define LADSPA_HINT_DEFAULT_MIDDLE  0xC0
+
+/* This default hint indicates that a high value between the suggested
+   lower and upper bounds should be chosen. For ports with
+   LADSPA_HINT_LOGARITHMIC, this should be exp(log(lower) * 0.25 +
+   log(upper) * 0.75). Otherwise, this should be (lower * 0.25 + upper
+   * 0.75). */
+#define LADSPA_HINT_DEFAULT_HIGH    0x100
+
+/* This default hint indicates that the suggested upper bound for the
+   port should be used. */
+#define LADSPA_HINT_DEFAULT_MAXIMUM 0x140
+
+/* This default hint indicates that the number 0 should be used. Note
+   that this default may be used in conjunction with
+   LADSPA_HINT_TOGGLED. */
+#define LADSPA_HINT_DEFAULT_0       0x200
+
+/* This default hint indicates that the number 1 should be used. Note
+   that this default may be used in conjunction with
+   LADSPA_HINT_TOGGLED. */
+#define LADSPA_HINT_DEFAULT_1       0x240
+
+/* This default hint indicates that the number 100 should be used. */
+#define LADSPA_HINT_DEFAULT_100     0x280
+
+/* This default hint indicates that the Hz frequency of `concert A'
+   should be used. This will be 440 unless the host uses an unusual
+   tuning convention, in which case it may be within a few Hz. */
+#define LADSPA_HINT_DEFAULT_440     0x2C0
 
 #define LADSPA_IS_HINT_BOUNDED_BELOW(x) ((x) & LADSPA_HINT_BOUNDED_BELOW)
 #define LADSPA_IS_HINT_BOUNDED_ABOVE(x) ((x) & LADSPA_HINT_BOUNDED_ABOVE)
@@ -227,6 +309,26 @@ typedef int LADSPA_PortRangeHintDescriptor;
 #define LADSPA_IS_HINT_SAMPLE_RATE(x)   ((x) & LADSPA_HINT_SAMPLE_RATE)
 #define LADSPA_IS_HINT_LOGARITHMIC(x)   ((x) & LADSPA_HINT_LOGARITHMIC)
 #define LADSPA_IS_HINT_INTEGER(x)       ((x) & LADSPA_HINT_INTEGER)
+
+#define LADSPA_IS_HINT_HAS_DEFAULT(x)   ((x) & LADSPA_HINT_DEFAULT_MASK)
+#define LADSPA_IS_HINT_DEFAULT_MINIMUM(x)  (((x) & LADSPA_HINT_DEFAULT_MASK)  \
+                                         == LADSPA_HINT_DEFAULT_MINIMUM)
+#define LADSPA_IS_HINT_DEFAULT_LOW(x)      (((x) & LADSPA_HINT_DEFAULT_MASK)  \
+                                         == LADSPA_HINT_DEFAULT_LOW)
+#define LADSPA_IS_HINT_DEFAULT_MIDDLE(x)   (((x) & LADSPA_HINT_DEFAULT_MASK)  \
+                                         == LADSPA_HINT_DEFAULT_MIDDLE)
+#define LADSPA_IS_HINT_DEFAULT_HIGH(x)     (((x) & LADSPA_HINT_DEFAULT_MASK)  \
+                                         == LADSPA_HINT_DEFAULT_HIGH)
+#define LADSPA_IS_HINT_DEFAULT_MAXIMUM(x)  (((x) & LADSPA_HINT_DEFAULT_MASK)  \
+                                         == LADSPA_HINT_DEFAULT_MAXIMUM)
+#define LADSPA_IS_HINT_DEFAULT_0(x)        (((x) & LADSPA_HINT_DEFAULT_MASK)  \
+                                         == LADSPA_HINT_DEFAULT_0)
+#define LADSPA_IS_HINT_DEFAULT_1(x)        (((x) & LADSPA_HINT_DEFAULT_MASK)  \
+                                         == LADSPA_HINT_DEFAULT_1)
+#define LADSPA_IS_HINT_DEFAULT_100(x)      (((x) & LADSPA_HINT_DEFAULT_MASK)  \
+                                         == LADSPA_HINT_DEFAULT_100)
+#define LADSPA_IS_HINT_DEFAULT_440(x)      (((x) & LADSPA_HINT_DEFAULT_MASK)  \
+                                         == LADSPA_HINT_DEFAULT_440)
 
 typedef struct _LADSPA_PortRangeHint {
 
@@ -286,13 +388,13 @@ typedef struct _LADSPA_Descriptor {
      (e.g. "Sine Oscillator"). */
   const char * Name;
 
-  /* This member points to the null-terminated std::string indicating the
-     maker of the plugin. This can be an empty std::string but not NULL. */
+  /* This member points to the null-terminated string indicating the
+     maker of the plugin. This can be an empty string but not NULL. */
   const char * Maker;
 
-  /* This member points to the null-terminated std::string indicating any
+  /* This member points to the null-terminated string indicating any
      copyright applying to the plugin. If no Copyright applies the
-     std::string "None" should be used. */
+     string "None" should be used. */
   const char * Copyright;
 
   /* This indicates the number of ports (input AND output) present on
@@ -303,7 +405,7 @@ typedef struct _LADSPA_Descriptor {
      vary from 0 to PortCount-1. */
   const LADSPA_PortDescriptor * PortDescriptors;
 
-  /* This member indicates an array of null-terminated std::strings
+  /* This member indicates an array of null-terminated strings
      describing ports (e.g. "Frequency (Hz)"). Valid indices vary from
      0 to PortCount-1. */
   const char * const * PortNames;
@@ -489,7 +591,7 @@ typedef const LADSPA_Descriptor *
 /**********************************************************************/
 
 #ifdef __cplusplus
-};
+}
 #endif
 
 #endif /* LADSPA_INCLUDED */
